New imports style in example

--- a/example.ipynb
+++ b/example.ipynb
@@ -18,8 +18,7 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from vprdb.io import export, read_dataset_from_depth, read_dataset_from_point_clouds\n",
-    "from vprdb.reduction_methods import DominatingSet"
+    "from vprdb import io, reduction_methods"
    ],
    "metadata": {
     "collapsed": false
@@ -39,9 +38,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "path_to_dataset = (\n",
-    "    \"path/to/dataset/with/depth/images\"\n",
-    ")\n",
+    "path_to_dataset = \"path/to/dataset/with/depth/images\"\n",
     "intrinsics = np.asarray(\n",
     "    [\n",
     "        [953.95397949, 0.0, 958.03153013],\n",
@@ -49,14 +46,14 @@
     "        [0.0, 0.0, 1.0],\n",
     "    ]\n",
     ")\n",
-    "database_from_depth_images = read_dataset_from_depth(\n",
+    "database_from_depth_images = io.read_dataset_from_depth(\n",
     "    path_to_dataset=Path(path_to_dataset),\n",
     "    color_dir=\"color\",\n",
     "    depth_dir=\"depth\",\n",
     "    trajectory_file_name=\"CameraTrajectory.txt\",\n",
     "    intrinsics=intrinsics,\n",
     "    depth_scale=1000,\n",
-    "    with_timestamps=True\n",
+    "    with_timestamps=True,\n",
     ")"
    ],
    "metadata": {
@@ -77,15 +74,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "path_to_dataset = (\n",
-    "    \"path/to/dataset/with/point/clouds\"\n",
-    ")\n",
-    "database_from_point_clouds = read_dataset_from_point_clouds(\n",
+    "path_to_dataset = \"path/to/dataset/with/point/clouds\"\n",
+    "database_from_point_clouds = io.read_dataset_from_point_clouds(\n",
     "    path_to_dataset=Path(path_to_dataset),\n",
     "    color_dir=\"color\",\n",
     "    point_clouds_dir=\"pcd\",\n",
     "    trajectory_file_name=\"CameraTrajectory.txt\",\n",
-    "    with_timestamps=True\n",
+    "    with_timestamps=True,\n",
     ")"
    ],
    "metadata": {
@@ -107,7 +102,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "dominating_set = DominatingSet(threshold=0.3, voxel_size=0.3)\n",
+    "dominating_set = reduction_methods.DominatingSet(threshold=0.3, voxel_size=0.3)\n",
     "reduced_db_from_depth_images = dominating_set.reduce(database_from_depth_images)"
    ],
    "metadata": {
@@ -128,12 +123,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "path_to_export = 'path/to/reduced_db'\n",
-    "export(database=reduced_db_from_depth_images,\n",
-    "       path_to_export=Path(path_to_export),\n",
-    "       color_dir='color',\n",
-    "       spatial_data_dir='depth',\n",
-    "       trajectory_file_name='poses.txt')"
+    "path_to_export = \"path/to/reduced_db\"\n",
+    "io.export(\n",
+    "    database=reduced_db_from_depth_images,\n",
+    "    path_to_export=Path(path_to_export),\n",
+    "    color_dir=\"color\",\n",
+    "    point_clouds_dir=\"depth\",\n",
+    "    trajectory_file_name=\"poses.txt\",\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false
